test/JDBC/expected/BABEL-2372.out
-- Setting language to anything other than "us_english" will throw an error in strict mode
EXEC sp_babelfish_configure 'babelfishpg_tsql.escape_hatch_session_settings', 'strict';
GO

SET LANGUAGE Italian
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Settings other than "us_english" are not allowed for option LANGUAGE. Please use babelfishpg_tsql.escape_hatch_session_settings to ignore)~~


SET LANGUAGE us_english
GO

declare @rc varchar(10) = 'Italian';
SET LANGUAGE @rc
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Settings other than "us_english" are not allowed for option LANGUAGE. Please use babelfishpg_tsql.escape_hatch_session_settings to ignore)~~


declare @rc varchar(10) = 'us_english';
SET LANGUAGE @rc
go

EXEC sp_babelfish_configure 'babelfishpg_tsql.escape_hatch_session_settings', 'ignore';
GO

SET LANGUAGE Italian
GO

SET LANGUAGE us_english
GO


declare @rc varchar(10) = 'Italian';
SET LANGUAGE @rc
go

declare @rc varchar(10) = 'us_english';
SET LANGUAGE @rc
go


declare @rc varchar(10) = NULL;
SET LANGUAGE @rc
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Invalid argument for SET LANGUAGE. Must be a non-null value.)~~


SET LANGUAGE NULL
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "NULL")~~

